<resources>
    <string name="app_name">LCAndroidSDKDemo</string>
    <string name="lc_demo_cn">国内</string>
    <string name="lc_demo_overseas">海外</string>
    <string name="lc_demo_cn_title_tip">对接乐橙国内开放平台</string>
    <string name="lc_demo_overseas_title_tip">对接乐橙海外开放平台</string>
    <string name="lc_demo_choose_env_tip1">开放平台HTTP API网关地址</string>
    <string name="lc_demo_choose_env_tip2">（默认不需要修改）</string>
    <string name="lc_demo_choose_env_ak">App ID</string>
    <string name="lc_demo_choose_env_ak_tip">请输入App ID</string>
    <string name="lc_demo_choose_env_sk">App Secret</string>
    <string name="lc_demo_choose_env_sk_tip">请输入App Secret</string>
    <string name="lc_demo_sure">确定</string>
    <string name="lc_demo_choose_env_tip3">提示：\n 请登录乐橙开放平台网站https://open.lechange.com，注册成为乐橙开发者账号，登录网站并创建应用后得到App ID和App Secret</string>
    <string name="lc_demo_choose_env_tip4">提示：\n 请登录乐橙开放平台网站https://open.easy4ip.com，注册成为乐橙开发者账号，登录网站并创建应用后得到App ID和App Secret</string>
    <string name="lc_demo_choose_env_tip5">《合规性法律条款》</string>
    <string name="lc_demo_main_title">北盘江大桥塔顶视频监控</string>
    <string name="lc_demo_main_offline">设备离线</string>
    <string name="lc_demo_main_no_device">暂无设备，请点击右上角“ + ”添加设备</string>
    <string name="lc_demo_device_version_tip">设备程序版本</string>
    <string name="lc_demo_device_version_new">最新版本</string>
    <string name="lc_demo_device_version_current">当前版本</string>
    <string name="lc_demo_device_move_check">移动检测</string>
    <string name="lc_demo_device_warn_setting">报警设置</string>
    <string name="lc_demo_device_version_new_tip">当前已是最新版本</string>
    <string name="lc_demo_device_deployment_tip">开启后，检测到画面变化将录制视频</string>
        <string name="lc_demo_device_deployment_setting">布防设置</string>
    <string name="lc_demo_device_delete">删除</string>
    <string name="lc_demo_device_name_hint">请输入设备名称</string>
    <string name="lc_demo_device_update">升级</string>
    <string name="lc_demo_device_begin_update">开始升级</string>
    <string name="lc_demo_device_updateing">正在升级</string>
    <string name="lc_demo_device_cancel">取消</string>
    <string name="lc_demo_device_update_tip">提示</string>
    <string name="lc_demo_device_detail_title">设备详情</string>
    <string name="lc_demo_device_deployment_title">布防设置</string>
    <string name="lc_demo_device_version_title">设备程序版本</string>
    <string name="lc_demo_device_update_msg">升级过程将持续几分钟，升级时请务必保证设备不断电</string>
    <string name="lc_demo_device_modify_success">保存成功</string>
    <string name="lc_demo_device_unbind_success">解绑成功</string>
    <string name="lc_demo_device_update_success">升级成功</string>
    <string name="lc_demo_device_cloud_video">云录像</string>
    <string name="lc_demo_device_local_video">本地录像</string>
    <string name="lc_demo_device_more_video">今日暂无录像，查看更多 ></string>
    <string name="lc_demo_device_video_play_error">播放失败</string>
    <string name="lc_demo_device_video_play_loading">正在建立视频安全通道. . .</string>
    <string name="lc_demo_device_video_play_change">正在切换视频安全通道. . .</string>
    <string name="lc_demo_device_capture_success">截图成功</string>
    <string name="lc_demo_device_capture_failed">截图失败</string>
    <string name="lc_demo_device_record_begin">开始录屏</string>
    <string name="lc_demo_device_record_stop">结束录屏</string>
    <string name="lc_demo_device_talk_open_failed">对讲打开失败</string>
    <string name="lc_demo_device_talk_open_success">对讲开始</string>
    <string name="lc_demo_device_record_loading_more">查看更多</string>
    <string name="lc_demo_device_record_edit">编辑</string>
    <string name="lc_demo_device_record_edit_finish">完成</string>
    <string name="lc_demo_device_record_delete_success">删除成功</string>
    <string name="lc_demo_device_record_download">下载</string>
    <string name="lc_demo_device_record_download_finish">下载完成</string>
    <string name="lc_demo_device_record_download_error">下载失败，点击重试</string>
    <string name="lc_demo_device_record_download_begin">开始下载</string>
    <string name="lc_demo_device_encrypt_key_tip">视频已加密，请输入密码</string>
    <string name="lc_demo_device_sure">确定</string>
    <string name="lc_demo_device_cur_wifi">网络配置</string>
    <string name="lc_demo_device_serial_tip">序列号</string>
    <string name="lc_demo_device_type_tip">设备型号</string>
    <string name="lc_demo_device_name">设备名称</string>
    <string name="lc_demo_device_nvr_no_channel">暂无通道</string>
    <string name="lc_demo_device_delete_choose_all">全选</string>
    <string name="lc_demo_device_delete_sure">确定删除？</string>
    <string name="lc_demo_device_delete_exit">确定退出？</string>
    <string name="lc_demo_device_delete_exit_tip">录像下载未完成，退出将取消下载，是否退出</string>
    <string name="lc_demo_device_today_no_record">今日暂无录像</string>
</resources>
