<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/lc_demo_color_ffffff"
    android:orientation="vertical"
    android:paddingLeft="@dimen/px_30"
    android:paddingRight="@dimen/px_30">

    <LinearLayout
        android:layout_width="@dimen/px_340"
        android:layout_height="@dimen/px_80"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="@dimen/px_30"
        android:background="@drawable/lc_demo_border_100r_shape"
        android:gravity="center">

        <TextView
            android:id="@+id/tv_title_cn"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/lc_demo_bg_selector"
            android:gravity="center"
            android:text="@string/lc_demo_cn"
            android:textColor="@drawable/lc_demo_txt_color_selector"
            android:textSize="@dimen/px_28"></TextView>

        <TextView
            android:id="@+id/tv_overseas"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/lc_demo_bg_selector"
            android:gravity="center"
            android:text="@string/lc_demo_overseas"
            android:textColor="@drawable/lc_demo_txt_color_selector"
            android:textSize="@dimen/px_28"></TextView>
    </LinearLayout>

    <TextView
        android:id="@+id/tv_tip1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/px_50"
        android:text="@string/lc_demo_cn_title_tip"
        android:textColor="@color/lc_demo_color_2c2c2c"
        android:textSize="@dimen/px_40"></TextView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/tv_url_tip"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/px_50"
            android:textColor="@color/lc_demo_color_2c2c2c"
            android:textSize="@dimen/px_30"></TextView>
    </LinearLayout>

    <com.mm.android.deviceaddmodule.mobilecommon.widget.ClearEditText
        android:id="@+id/tv_url"
        android:layout_width="match_parent"
        android:layout_height="@dimen/px_98"
        android:layout_marginTop="@dimen/dp_20"
        android:background="@drawable/lc_demo_border_org_4r_shape"
        android:gravity="center_vertical"
        android:imeOptions="actionSearch"
        android:inputType="text"
        android:paddingLeft="@dimen/dp_15"
        android:paddingRight="@dimen/dp_15"
        android:singleLine="true"
        android:textColor="@color/lc_demo_color_2c2c2c"
        android:textCursorDrawable="@drawable/lc_demo_cursor_drawable"
        android:textSize="17sp">

        <requestFocus />
    </com.mm.android.deviceaddmodule.mobilecommon.widget.ClearEditText>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/px_30"
        android:text="@string/lc_demo_choose_env_ak"
        android:textColor="@color/lc_demo_color_2c2c2c"
        android:textSize="@dimen/px_30"></TextView>

    <com.mm.android.deviceaddmodule.mobilecommon.widget.ClearEditText
        android:id="@+id/tv_ak"
        android:layout_width="match_parent"
        android:layout_height="@dimen/px_98"
        android:layout_marginTop="@dimen/dp_20"
        android:background="@drawable/lc_demo_border_gray_4r_shape"
        android:focusable="true"
        android:hint="@string/lc_demo_choose_env_ak_tip"
        android:text="lca4d217e39e22461f"
        android:imeOptions="actionSearch"
        android:inputType="text"
        android:paddingLeft="@dimen/dp_15"
        android:paddingRight="@dimen/dp_15"
        android:singleLine="true"
        android:textColor="@color/lc_demo_color_2c2c2c"
        android:textCursorDrawable="@drawable/lc_demo_cursor_drawable"
        android:textSize="17sp">

        <requestFocus />
    </com.mm.android.deviceaddmodule.mobilecommon.widget.ClearEditText>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/px_30"
        android:text="@string/lc_demo_choose_env_sk"
        android:textColor="@color/lc_demo_color_2c2c2c"
        android:textSize="@dimen/px_30"></TextView>

    <com.mm.android.deviceaddmodule.mobilecommon.widget.ClearEditText
        android:id="@+id/tv_sk"
        android:layout_width="match_parent"
        android:layout_height="@dimen/px_98"
        android:layout_marginTop="@dimen/dp_20"
        android:background="@drawable/lc_demo_border_gray_4r_shape"
        android:hint="@string/lc_demo_choose_env_sk_tip"
        android:imeOptions="actionSearch"
        android:inputType="text"
        android:text="7ee28d6ef5c848439f6ceeaf908d21 "
        android:paddingLeft="@dimen/dp_15"
        android:paddingRight="@dimen/dp_15"
        android:singleLine="true"
        android:textColor="@color/lc_demo_color_2c2c2c"
        android:textCursorDrawable="@drawable/lc_demo_cursor_drawable"
        android:textSize="17sp">

        <requestFocus />
    </com.mm.android.deviceaddmodule.mobilecommon.widget.ClearEditText>

    <TextView
        android:id="@+id/tv_sure"
        android:layout_width="match_parent"
        android:layout_height="@dimen/px_90"
        android:layout_marginTop="@dimen/px_100"
        android:background="@drawable/lc_demo_soild_10r_org_shape"
        android:gravity="center"
        android:text="@string/lc_demo_sure"
        android:textColor="@color/lc_demo_color_ffffff"
        android:textSize="@dimen/px_32"></TextView>

    <TextView
        android:id="@+id/tv_tip2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/px_30"
        android:layout_marginRight="@dimen/px_100"
        android:lineSpacingMultiplier="1.5"
        android:text="@string/lc_demo_choose_env_tip3"
        android:textColor="@color/lc_demo_color_8f8f8f"
        android:textSize="@dimen/px_24"></TextView>

</LinearLayout>