<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="@dimen/px_600"
        android:layout_height="wrap_content"
        android:background="@drawable/lc_demo_pg_background"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tv_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:layout_gravity="center_horizontal"
            android:gravity="center"
            android:padding="@dimen/px_20"
            android:text="@string/lc_demo_device_update_tip"
            android:textColor="@color/lc_demo_color_2c2c2c"
            android:textSize="@dimen/px_36" />

        <TextView
            android:id="@+id/tv_msg"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/px_40"
            android:layout_marginTop="@dimen/px_40"
            android:layout_marginRight="@dimen/px_40"
            android:text="@string/lc_demo_device_update_msg"
            android:gravity="center"
            android:lineSpacingMultiplier="1.2"
            android:textColor="@color/lc_demo_color_2c2c2c"
            android:textSize="@dimen/px_30" />

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/px_2"
            android:layout_marginTop="@dimen/px_50"
            android:background="@color/lc_demo_color_f2f2f2"></View>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/px_100"
            android:layout_marginLeft="@dimen/px_20"
            android:layout_marginRight="@dimen/px_20"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/btn_cancel"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_centerHorizontal="true"
                android:layout_marginRight="@dimen/px_20"
                android:layout_toLeftOf="@+id/btn_cancel"
                android:layout_weight="1"
                android:background="@color/lc_demo_color_ffffff"
                android:gravity="center"
                android:padding="@dimen/px_10"
                android:text="@string/lc_demo_device_cancel"
                android:textColor="@color/lc_demo_color_2c2c2c"
                android:textSize="@dimen/px_30" />

            <View
                android:layout_width="@dimen/px_2"
                android:layout_height="@dimen/px_40"
                android:layout_gravity="center_vertical"
                android:background="@color/lc_demo_color_f2f2f2"></View>

            <TextView
                android:id="@+id/btn_ok"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_alignParentRight="true"
                android:layout_centerHorizontal="true"
                android:layout_weight="1"
                android:background="@color/lc_demo_color_ffffff"
                android:gravity="center"
                android:padding="@dimen/px_10"
                android:text="@string/lc_demo_device_begin_update"
                android:textColor="@color/lc_demo_color_f18d00"
                android:textSize="@dimen/px_30" />

        </LinearLayout>
    </LinearLayout>
</LinearLayout>