<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/lc_demo_color_ffffff"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/px_140">

        <FrameLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent">

            <LinearLayout
                android:id="@+id/ll_back"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_centerVertical="true"
                android:paddingLeft="@dimen/px_20"
                android:paddingRight="@dimen/px_20">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:src="@mipmap/lc_demo_nav_back"></ImageView>
            </LinearLayout>

            <LinearLayout
                android:visibility="gone"
                android:id="@+id/ll_all"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_alignParentRight="true"
                android:gravity="center"
                android:paddingLeft="@dimen/px_20"
                android:paddingRight="@dimen/px_20">

                <TextView
                    android:id="@+id/tv_all"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/lc_demo_device_delete_choose_all"
                    android:textColor="@color/lc_demo_color_f18d00"
                    android:textSize="@dimen/px_32"></TextView>
            </LinearLayout>

        </FrameLayout>

        <LinearLayout
            android:layout_width="@dimen/px_360"
            android:layout_height="@dimen/px_65"
            android:layout_centerInParent="true"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/px_30"
            android:background="@drawable/lc_demo_border_100r_shape">

            <TextView
                android:id="@+id/tv_cloud_record"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/lc_demo_bg_selector"
                android:gravity="center"
                android:text="@string/lc_demo_device_cloud_video"
                android:textColor="@drawable/lc_demo_txt_color_selector"
                android:textSize="@dimen/px_28"></TextView>

            <TextView
                android:id="@+id/tv_local_record"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/lc_demo_bg_selector"
                android:gravity="center"
                android:text="@string/lc_demo_device_local_video"
                android:textColor="@drawable/lc_demo_txt_color_selector"
                android:textSize="@dimen/px_28"></TextView>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_edit"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_alignParentRight="true"
            android:gravity="center"
            android:paddingLeft="@dimen/px_20"
            android:paddingRight="@dimen/px_20">

            <TextView
                android:id="@+id/tv_edit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/lc_demo_device_record_edit"
                android:textColor="@color/lc_demo_color_f18d00"
                android:textSize="@dimen/px_32"></TextView>
        </LinearLayout>
    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/px_1"
        android:background="@color/lc_demo_color_2c2c2c"></View>

    <FrameLayout
        android:id="@+id/fr_content"
        android:layout_width="match_parent"
        android:layout_height="match_parent"></FrameLayout>
</LinearLayout>